# Dubai

./: .env.apis  .env.example  .env.production  .gitignore  API_SETUP.md  Cargo.toml  DEPLOY_GUIDE.md  DUBAI_DEPLOYMENT_SUMMARY.md  Dockerfile  INTEGRATION_APIS.md  INTEGRATION_STATUS.md  MONGODB_STATUS.md  Readme  deploy-avila-cloud.ps1  deploy.ps1  deploy.sh  docker-compose.yml  fetch-apis.ps1  run-local.ps1  sync-atlas.ps1  sync-now.ps1
.github/: SECRETS.md
.github/scripts/: sync-secrets.ps1
.github/workflows/: pages.yml
crates/avila-auth/: Cargo.toml
crates/avila-auth/src/: lib.rs
crates/avila-cache/: Cargo.toml
crates/avila-cache/src/: lib.rs
crates/avila-crypto/: Cargo.toml
crates/avila-crypto/src/: lib.rs
crates/avila-db/: Cargo.toml
crates/avila-db/src/: lib.rs
crates/avila-extract/: Cargo.toml
crates/avila-extract/src/: lib.rs
crates/avila-http/: Cargo.toml  TLS_README.md
crates/avila-http/src/: lib.rs  tls.rs
crates/avila-image/: Cargo.toml
crates/avila-image/src/: lib.rs
crates/avila-json/src/: lib.rs
crates/avila-mongo/: Cargo.toml
crates/avila-mongo/src/: lib.rs
crates/avila-parser/: Cargo.toml
crates/avila-parser/src/: lib.rs
crates/avila-pdf/: Cargo.toml
crates/avila-pdf/src/: lib.rs
crates/avila-queue/: Cargo.toml
crates/avila-queue/src/: lib.rs
crates/avila-search/: Cargo.toml
crates/avila-search/src/: lib.rs
deploy/: SSL_SETUP.md  dubai-project.service  nginx-dubai.conf
docs/: CNAME  DEPLOY_GITHUB_PAGES.md  index-invoice-backup.html  index.html
docs/assets/: app.js  style.css
docs/data/: dubai-properties.json  invoice-edp-2025-11.json
monitoring/: alerts.yml  monitor.ps1  monitor.sh  prometheus.yml
monitoring/grafana/dashboards/: dubai-dashboard.json
src/: integration.rs  lib.rs  main.rs
tests/: integration_test.rs
