[package]
name = "dubai-project"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <avilaops@gmail.com>"]
description = "Dubai establishment project - 100% Rust with zero external dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avilaops/dubai"

[lib]
name = "dubai_project"
path = "src/lib.rs"

[[bin]]
name = "dubai-project"
path = "src/main.rs"

[dependencies]
# Zero external dependencies - 100% native Rust implementation
# Internal workspace crates
avila-geo = { path = "crates/avila-geo" }
avila-extract = { path = "crates/avila-extract" }
avila-parser = { path = "crates/avila-parser" }
avila-http = { path = "crates/avila-http" }
avila-json = { path = "crates/avila-json" }
avila-crypto = { path = "crates/avila-crypto" }
avila-db = { path = "crates/avila-db" }
avila-cache = { path = "crates/avila-cache" }
avila-auth = { path = "crates/avila-auth" }
avila-pdf = { path = "crates/avila-pdf" }
avila-queue = { path = "crates/avila-queue" }
avila-search = { path = "crates/avila-search" }
avila-image = { path = "crates/avila-image" }

[workspace]
members = [
    "crates/avila-geo",
    "crates/avila-extract",
    "crates/avila-parser",
    "crates/avila-http",
    "crates/avila-json",
    "crates/avila-crypto",
    "crates/avila-db",
    "crates/avila-cache",
    "crates/avila-auth",
    "crates/avila-pdf",
    "crates/avila-queue",
    "crates/avila-search",
    "crates/avila-image",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
